# roz

./: .env.sample  .gitignore  pi-cam-off.sh  pi-cam-on.sh  pyproject.toml
analytics/: README.md  config.py  db_client.py  db_helpers.py  generate_heatmap_image.py  heatmap_helpers.py  heatmap_processor.py  heatmap_writer.py  heatmapper_worker.py  migrate_s3_structure.py
app/: README.md  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml
app/src/: middleware.ts
app/src/app/: calendar-styles.css  globals.css  layout.tsx  page.tsx
app/src/app/api/cameras/: route.ts
app/src/app/api/heatmap/: route.ts
app/src/app/api/heatmap/image/: route.ts
app/src/app/api/heatmap/image/__tests__/: route.test.ts
app/src/app/dashboard/: page.tsx
app/src/components/: AuthBanner.tsx
app/src/hooks/: useAuth.ts
app/src/lib/: auth.ts  db.ts
app/src/lib/dao/: heatmapDao.ts
app/src/lib/dao/__tests__/: heatmapDao.test.ts
app/src/lib/services/: heatmapImageGenerator.ts
app/src/lib/services/__tests__/: heatmapImageGenerator.test.ts
db/: README.md  migrate.py  schema.sql
db/migrations/: 001_initial_schema.sql  002_add_retention_policy.sql
